--- a/backend/package.json
+++ b/backend/package.json
@@ -142,7 +142,12 @@
         "typescript": "^5.0.3"
     },
     "scripts": {
-        "build": "tsc",
+        "build": "yarn clean && tsc && yarn copy-files",
+        "build2": "yarn clean2 && tsc && yarn copy-files",
+        "clean": "rm -rf ./build",
+        "clean2": "rmdir /s /q .\\build",
+        "copy-files": "cp ./src/app/docs ./build/app/docs -r",
+        "copy-files2": "xcopy Z:\\git\\apps\\dvs-mern-services\\src\\app\\docs Z:\\git\\apps\\dvs-mern-services\\build\\app\\docs /e /c /h /k /o /y",
         "start": "node build/index.js",
         "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
         "swg": "node src/app/docs/generator/swagger.js",
