--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -46,7 +46,7 @@
         "config-6": "dotenv cross-var pulumi config set repo '%PULUMI_REPO_NAME%'",
         "config-7": "dotenv cross-var pulumi config set branch '%PULUMI_REPO_BRANCH%'",
         "config-8": "dotenv cross-var pulumi config set services_name '%PULUMI_SERVICES_NAME%'",
-        "config-9": "dotenv cross-var DIGITALOCEAN_TOKEN=%DIGITALOCEAN_TOKEN%",
+        "config-9": "dotenv cross-var echo export DIGITALOCEAN_TOKEN=%DIGITALOCEAN_TOKEN% && echo $DIGITALOCEAN_TOKEN",
         "configs" : "npm run config-1 && npm run config-2 && npm run config-3 && npm run config-4 && npm run config-5 && npm run config-6 && npm run config-7 && npm run config-8 && npm run config-9",
         "live": "npm run configs && pulumi up",
         "destroy": "pulumi destroy",
