--- a/backend/package.json
+++ b/backend/package.json
@@ -109,6 +109,7 @@
         "socket.io": "^4.6.1",
         "swagger-autogen": "^2.23.1",
         "swagger-express-router": "^1.0.0",
+        "swagger-ui-express": "^4.6.2",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
     },
