--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,16 +8,44 @@
 # testing
 /coverage
 
+# storybook
+storybook-static
+
+# cypress
+cypress/screenshots
+cypress/videos
+
+# next.js
+/.next
+/out
+
+# next-sitemap
+public/robots.txt
+public/sitemap.xml
+public/sitemap-*.xml
+
+# cache
+.swc/
+
 # production
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
+Thumbs.db
 
+# debug
 npm-debug.log*
+pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# local env files
+.env*.local
+
+# local folder
+local
+
+# vercel
+.vercel
