--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,38 @@
     "email": "dovelous@gmail.com",
     "url": "https://dovellous.com"
   },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "build-stats": "cross-env ANALYZE=true npm run build",
+    "build-prod": "run-s clean build export",
+    "clean": "rimraf .next out",
+    "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+    "test": "jest",
+    "commit": "cz",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
+    "storybook:serve": "http-server storybook-static --port 6006 --silent",
+    "serve-storybook": "run-s storybook:*",
+    "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
+    "prepare": "husky install",
+    "postbuild": "next-sitemap",
+    "tailwind": "tailwindcss -i ./src/styles/global.css -o ./src/styles/dist.css",
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject"
+  },
   "dependencies": {
-    "0xsequence": "^0.43.25",
+    "0xsequence": "^0.43.26",
     "@babel/core": "^7.21.4",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
@@ -39,35 +69,20 @@
     "@heroicons/react": "^2.0.17",
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^10.2.1",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.15",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.32",
+    "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.13.1",
-    "axios": "^1.3.4",
-    "node-sass": "^8.0.0",
-    "react": "^18.2.0",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "react-lazy-load": "^4.0.1",
-    "react-modal": "^3.16.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
-    "react-sliding-pane": "^7.3.0",
-    "swiper": "^9.2.0",
-    "typescript": "^5.0.3",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^3.3.0",
-    "@tailwindcss/forms": "^0.5.3",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.3",
@@ -76,6 +91,7 @@
     "@web3modal/react": "^2.2.2",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.3.5",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
@@ -89,7 +105,7 @@
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.10",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^5.7.2",
+    "ethers": "^6.3.0",
     "firebase": "^9.19.1",
     "form-data": "^4.0.0",
     "gh-pages": "^5.0.0",
@@ -99,38 +115,52 @@
     "ipfs-http-client": "^60.0.0",
     "javascript-time-ago": "^2.5.9",
     "jest": "^29.5.0",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.1",
     "log4js": "^6.9.1",
     "matchmedia-polyfill": "^0.3.2",
     "mini-css-extract-plugin": "^2.7.5",
     "moment": "^2.29.4",
-    "next": "13.2.4",
+    "next": "13.3.0",
     "next-iron-session": "^4.2.0",
+    "next-seo": "^6.0.0",
+    "next-sitemap": "^4.0.7",
     "nft.storage": "^7.0.3",
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "pinst": "^3.0.0",
     "postcss": "^8.4.21",
-    "postcss-loader": "^7.1.0",
-    "postcss-preset-env": "^8.3.0",
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^8.3.1",
+    "preline": "^1.8.0",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "react-simple-hook-modal": "^1.1.0",
+    "react-sliding-pane": "^7.3.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
-    "rtlcss": "^4.0.0",
+    "rtlcss": "^4.1.0",
     "sf-font": "^1.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "solidity-coverage": "^0.8.2",
     "style-loader": "^3.3.2",
     "sweetalert2": "^11.7.3",
-    "swr": "^2.1.2",
+    "swiper": "^9.2.0",
+    "swr": "^2.1.3",
     "tailwindcss": "^3.3.1",
     "tailwindcss-custom-groups": "^1.1.2",
     "tippy.js": "^6.3.7",
@@ -138,18 +168,102 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
+    "typescript": "^5.0.3",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.8",
+    "wagmi": "^0.12.10",
+    "web-vitals": "^3.3.1",
     "web3modal": "^1.9.12",
-    "webpack": "^5.77.0",
+    "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cz-commitlint": "^17.5.0",
+    "@next/bundle-analyzer": "^13.3.0",
+    "@percy/cli": "^1.23.0",
+    "@percy/cypress": "^3.1.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/nextjs": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/test-runner": "^0.10.0",
+    "@storybook/testing-library": "^0.1.0",
+    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^6.0.0",
+    "cypress": "^12.9.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "http-server": "^14.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "rimraf": "^5.0.0",
+    "semantic-release": "^21.0.1",
+    "start-server-and-test": "^2.0.0",
+    "storybook": "^7.0.2",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": false
+        }
+      ],
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
   },
   "eslintConfig": {
     "extends": [
