--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,7 @@
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
     "serve-storybook": "run-s storybook:*",
     "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
-    "prepare": "husky install",
+    "prepare": "",
     "postbuild": "next-sitemap",
     "tailwind": "tailwindcss -i ./src/styles/global.css -o ./src/styles/dist.css",
     "react-start": "react-scripts start",
@@ -111,7 +111,6 @@
     "form-data": "^4.0.0",
     "gh-pages": "^5.0.0",
     "https-browserify": "^1.0.0",
-    "husky": "^8.0.3",
     "infura-web3-provider": "^0.0.3",
     "ipfs-http-client": "^60.0.0",
     "javascript-time-ago": "^2.5.9",
@@ -227,7 +226,6 @@
     "eslint-plugin-testing-library": "^5.10.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "http-server": "^14.1.1",
-    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
