--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
     "prepare": "",
     "postbuild": "next-sitemap",
-    "tailwind": "tailwindcss -i ./src/styles/global.css -o ./src/styles/dist.css",
+    "tailwind": "tailwindcss -i ./src/styles/main.scss -o ./src/styles/global.css",
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
@@ -77,12 +77,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-modal": "^3.13.1",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.3",
@@ -103,11 +97,14 @@
     "cryptocurrency-icons": "^0.18.1",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.0",
+    "daisyui": "^2.51.5",
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.10",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^6.3.0",
     "firebase": "^9.19.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.3",
     "form-data": "^4.0.0",
     "gh-pages": "^5.0.0",
     "https-browserify": "^1.0.0",
@@ -153,6 +150,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "rtlcss": "^4.1.0",
+    "sass": "^1.62.0",
     "sf-font": "^1.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
@@ -168,7 +166,6 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^5.0.3",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "wagmi": "^0.12.10",
@@ -198,7 +195,10 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.0.34",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.14",
@@ -235,7 +235,6 @@
     "rimraf": "^5.0.0",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.2",
-    "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   },
   "config": {
