--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,6 +7,7 @@
   "author": "@Dovellous, @Code_Writer",
   "license": "MIT",
   "scripts": {
+    "init-node": "npx hardhat node --network hardhat",
     "test": "npx hardhat test --network localhost",
     "deploy-local": "npx hardhat run scripts/deploy.ts --network localhost",
     "deploy-sepolia": "npx hardhat run scripts/deploy.ts --network sepolia"
